--- a/teaching/index.html
+++ b/teaching/index.html
@@ -52,7 +52,7 @@
   
 
    
-  <meta property="og:description" content="## ESILV - Leonardo da Vinci Engineering School ### Since 2014 * Machine Learning. + Spring 17-18: Course repository . * Probabilities &amp; Statistics. + Prepared by me for Spring 16-17: - Discrete Random Variables: 1 , 2 . - Continuous Random Variables: . - Slides on Continuous Random Variables:...">
+  <meta property="og:description" content="## ESILV - Leonardo da Vinci Engineering School ### Since 2014 * Machine Learning. + Spring 17-18: Course materials . * Probabilities &amp; Statistics. + Prepared by me for Spring 16-17: - Discrete Random Variables: 1 , 2 . - Continuous Random Variables: . - Slides on Continuous Random Variables:...">
   
 
 
@@ -78,7 +78,7 @@
   
 
   
-  <meta name="twitter:description" content="## ESILV - Leonardo da Vinci Engineering School ### Since 2014 * Machine Learning. + Spring 17-18: Course repository . * Probabilities &amp; Statistics. + Prepared by me for Spring 16-17: - Discrete Random Variables: 1 , 2 . - Continuous Random Variables: . - Slides on Continuous Random Variables:...">
+  <meta name="twitter:description" content="## ESILV - Leonardo da Vinci Engineering School ### Since 2014 * Machine Learning. + Spring 17-18: Course materials . * Probabilities &amp; Statistics. + Prepared by me for Spring 16-17: - Discrete Random Variables: 1 , 2 . - Continuous Random Variables: . - Slides on Continuous Random Variables:...">
   
 
   
@@ -230,7 +230,7 @@
 <ul>
   <li>Machine Learning.
     <ul>
-      <li>Spring 17-18: <a target="_blank" href="../MLcourse/index.html">Course repository <i class="fa fa-book" aria-hidden="true"></i></a>.</li>
+      <li>Spring 17-18: <a target="_blank" href="../MLcourse/index.html">Course materials <i class="fa fa-book" aria-hidden="true"></i></a>.</li>
     </ul>
   </li>
 </ul>
