--- a/MLcourse/use-qual.html
+++ b/MLcourse/use-qual.html
@@ -32,8 +32,8 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   
   
+<link rel="prev" href="app-ht.html">
 
-<link rel="next" href="introduction.html">
 <script src="book_assets/jquery-2.2.3/jquery.min.js"></script>
 <link href="book_assets/gitbook-2.6.7/css/style.css" rel="stylesheet" />
 <link href="book_assets/gitbook-2.6.7/css/plugin-bookdown.css" rel="stylesheet" />
@@ -196,32 +196,74 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
           <div class="page-inner">
 
             <section class="normal" id="section-">
-<div id="header">
-<h1 class="title">Machine Learning</h1>
-<h4 class="author"><em>Mohamad Ghassany</em></h4>
-<h4 class="date"><em>2018-01-20</em></h4>
+<div id="use-qual" class="section level1">
+<h1><span class="header-section-number">C</span> Use of qualitative predictors</h1>
+<p>An important situation is how to deal with <em>qualitative</em>, and not <em>quantitative</em>, predictors when we fit a regression model. Qualitative predictors, also known as <em>categorical</em> variables or, in <code>R</code>’s terminology, <em>factors</em>, are very common, for example in social sciences. Dealing with them requires some care and proper understanding of how these variables are represented.</p>
+<p>The simplest case is the situation with <strong>two levels</strong>. A binary variable <span class="math inline">\(C\)</span> with two levels (for example, <em>a</em> and <em>b</em>) can be represented as <span class="math display">\[
+D=\left\{\begin{array}{ll}
+1,&amp;\text{if }C=b,\\
+0,&amp;\text{if }C=a.
+\end{array}\right.
+\]</span> <span class="math inline">\(D\)</span> now is a <em>dummy variable</em>: it codifies with zeros and ones the two possible levels of the categorical variable. An example of <span class="math inline">\(C\)</span> could be <em>gender</em>, which has levels <em>male</em> and <em>female</em>. The dummy variable associated is <span class="math inline">\(D=0\)</span> if the gender is male and <span class="math inline">\(D=1\)</span> if the gender is female.</p>
+<p>The advantage of this <em>dummification</em> is its interpretability in regression models. Since level <em>a</em> corresponds to <span class="math inline">\(0\)</span>, it can be seen as the <em>reference level</em> to which level <em>b</em> is compared. This is the key point in dummification: <strong>set one level as the reference and codify the rest as departures from it</strong> with ones.</p>
+<p><code>R</code> does the dummification automatically (translates a categorical variable <span class="math inline">\(C\)</span> into its dummy version <span class="math inline">\(D\)</span>) if it detects that a factor variable is present in the regression model.</p>
+<p>Let’s see now the case with <strong>more than two levels</strong>, for example, a categorical variable <span class="math inline">\(C\)</span> with levels <em>a</em>, <em>b</em>, and <em>c</em>. If we take <em>a</em> as the reference level, this variable can be represented by <em>two</em> dummy variables: <span class="math display">\[
+D_1=\left\{\begin{array}{ll}1,&amp;\text{if }C=b,\\0,&amp; \text{if }C\neq b\end{array}\right.
+\]</span> and <span class="math display">\[
+D_2=\left\{\begin{array}{ll}1,&amp;\text{if }C=c,\\0,&amp; \text{if }C\neq c.\end{array}\right.
+\]</span> Then <span class="math inline">\(C=a\)</span> is represented by <span class="math inline">\(D_1=D_2=0\)</span>, <span class="math inline">\(C=b\)</span> is represented by <span class="math inline">\(D_1=1,D_2=0\)</span> and <span class="math inline">\(C=c\)</span> is represented by <span class="math inline">\(D_1=0,D_2=1\)</span>.</p>
+<p>In general, if we have a categorical variable with <span class="math inline">\(J\)</span> levels, then the number of dummy variables required is <span class="math inline">\(J-1\)</span>. Again, <code>R</code> does the dummification automatically for you if it detects that a factor variable is present in the regression model.</p>
+<div class="rmdinsight">
+<p>
+It may happen that one dummy variable, say <span class="math inline"><em>D</em><sub>1</sub></span> is not significant, while other dummy variables, say <span class="math inline"><em>D</em><sub>2</sub></span>, are significant.
+</p>
 </div>
-<div id="welcome" class="section level1 unnumbered">
-<h1>Welcome</h1>
-<!-- # Introduction -->
-<p>Welcome to this course. It is only a little introduction to Machine Learning.</p>
-<p>The aim of Machine Learning is to build computer systems that can adapt to their environments and learn form experience. Learning techniques and methods from this field are successfully applied to a variety of learning tasks in a broad range of areas, including, for example, spam recognition, text classification, gene discovery, financial forecasting. The course will give an overview of many concepts, techniques, and algorithms in machine learning, beginning with topics such as linear regression and classification and ending up with topics such as kmeans and Expectation Maximization. The course will give the student the basic ideas and intuition behind these methods, as well as a more formal statistical and computational understanding. Students will have an opportunity to experiment with machine learning techniques in R and apply them to a selected problem.</p>
-<div id="course-overview" class="section level2 unnumbered">
-<h2>Course Overview</h2>
-<center>
-<iframe src="files/ML_Course_Overview.pdf" width="640" height="349" frameborder="0" allowfullscreen>
-</iframe>
-</center>
+<div class="rmdcaution">
+<p>
+<strong>Do not codify a categorical variable as a discrete variable</strong>. This constitutes a major methodological fail that will flaw the subsequent statistical analysis.
+</p>
+<p>
+For example if you have a categorical variable <code>party</code> with levels <code>partyA</code>, <code>partyB</code>, and <code>partyC</code>, do not encode it as a discrete variable taking the values <code>1</code>, <code>2</code>, and <code>3</code>, respectively. If you do so:
+</p>
+<ul>
+<li>
+You assume implicitly an order in the levels of <code>party</code>, since <code>partyA</code> is closer to <code>partyB</code> than to <code>partyC</code>.
+</li>
+<li>
+You assume implicitly that <code>partyC</code> is three times larger than <code>partyA</code>.
+</li>
+<li>
+The codification is completely arbitrary – why not considering <code>1</code>, <code>1.5</code>, and <code>1.75</code> instead of?
+</li>
+</ul>
+<p>
+The right way of dealing with categorical variables in regression is to set the variable as a factor and let <code>R</code> do internally the dummification.
+</p>
+</div>
 
 </div>
-</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
             </section>
 
           </div>
         </div>
       </div>
+<a href="app-ht.html" class="navigation navigation-prev navigation-unique" aria-label="Previous page"><i class="fa fa-angle-left"></i></a>
 
-<a href="introduction.html" class="navigation navigation-next navigation-unique" aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
 <script src="book_assets/gitbook-2.6.7/js/app.min.js"></script>
