--- a/MLcourse/pw-3.html
+++ b/MLcourse/pw-3.html
@@ -275,7 +275,7 @@ Note that:
 2- Use inline codes to call the coefficients instead of writing them manually.
 </p>
 <p>
-3- You can use Latex to simplify writing equations, you just need to put the equation code between two <code>$$</code>. For example: <code>$e^{_0+_1 X}$</code> will give <span class="math inline"><em>e</em><sup><em>β</em><sub>0</sub> + <em>β</em><sub>1</sub><em>X</em></sup></span>. Try some equations on this <a href="https://www.codecogs.com/latex/eqneditor.php">website</a>).
+3- You can use Latex to simplify writing equations, you just need to put the equation code between two <code>$$</code>. For example: <code>$e^{\beta_0+\beta_1 X}$</code> will give <span class="math inline"><em>e</em><sup><em>β</em><sub>0</sub> + <em>β</em><sub>1</sub><em>X</em></sup></span>. Try some equations on this <a href="https://www.codecogs.com/latex/eqneditor.php">website</a>).
 </p>
 <p>
 4- In fact, for any equation shown on this website, you can right click on it and see its corresonding Latex code.
