--- a/MLcourse/linear-discriminant-analysis.html
+++ b/MLcourse/linear-discriminant-analysis.html
@@ -25,7 +25,7 @@
 <meta name="author" content="Mohamad Ghassany">
 
 
-<meta name="date" content="2018-02-05">
+<meta name="date" content="2018-02-08">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -312,7 +312,7 @@ The decision surfaces for a linear discriminant classifiers are defined by the l
 Example: If <span class="math inline"><em>K</em> = 2</span> and <span class="math inline"><em>π</em><sub>1</sub> = <em>π</em><sub>2</sub></span>, then the <strong>desicion boundary</strong> is at <span class="math inline"><span class="math inline">\(x=\frac{\mu_1+\mu2}{2}\)</span></span> (<strong>Prove it!</strong>).
 </li>
 <li>
-An example where <span class="math inline"><em>μ</em><sub>1</sub> = −1.5</span>, <span class="math inline"><em>μ</em><sub>2</sub> = 1.5</span>, <span class="math inline"><em>μ</em><sub>1</sub> = <em>μ</em><sub>2</sub> = 0.5</span> and <span class="math inline"><em>σ</em><sup>2</sup> = 1</span> is shown in this following figure
+An example where <span class="math inline"><em>μ</em><sub>1</sub> = −1.5</span>, <span class="math inline"><em>μ</em><sub>2</sub> = 1.5</span>, <span class="math inline"><em>π</em><sub>1</sub> = <em>π</em><sub>2</sub> = 0.5</span> and <span class="math inline"><em>σ</em><sup>2</sup> = 1</span> is shown in this following figure
 </li>
 </ul>
 <center>
@@ -321,7 +321,7 @@ An example where <span class="math inline"><em>μ</em><sub>1</sub> = −1.5<
 <ul>
 <li>
 <p>
-See this <a href="https://www.coursera.org/learn/machine-learning/lecture/WuL1H/decision-boundary">video</a> to understand more about <em>decision boundary</em>.
+See this <a target="_blank" href="https://www.coursera.org/learn/machine-learning/lecture/WuL1H/decision-boundary"> video <i class="fa fa-video-camera" aria-hidden="true"></i></a> to understand more about <em>decision boundary</em> (Applied on logistic regression).
 </p>
 </li>
 <li>
