--- a/MLcourse/linear-regression.html
+++ b/MLcourse/linear-regression.html
@@ -25,7 +25,7 @@
 <meta name="author" content="Mohamad Ghassany">
 
 
-<meta name="date" content="2018-02-05">
+<meta name="date" content="2018-02-08">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -368,7 +368,7 @@ RSS &amp;= (y_1 - \hat{\beta_0} - \hat{\beta_1} x_1)^2 + (y_2 - \hat{\beta_0} - 
 2- Minimizing the <em>RSS</em> function requires to calculate the first order derivatives with respect to <span class="math inline"><em>β</em><sub>0</sub></span> and <span class="math inline"><em>β</em><sub>1</sub></span> and set them to zero.
 </p>
 <p>
-3- Click Click <a target="_blank" href="https://www.khanacademy.org/math/ap-statistics/bivariate-data-ap/least-squares-regression/v/introduction-to-residuals-and-least-squares-regression"> here <i class="fa fa-video-camera" aria-hidden="true"></i></a> and watch the video to understand more about the residuals and least squares.
+3- Click <a target="_blank" href="https://www.khanacademy.org/math/ap-statistics/bivariate-data-ap/least-squares-regression/v/introduction-to-residuals-and-least-squares-regression"> here <i class="fa fa-video-camera" aria-hidden="true"></i></a> and watch the video to understand more about the residuals and least squares.
 </p>
 <p>
 4- Click <a href="https://egarpor.shinyapps.io/least-squares/" target="_blank">here</a> to see the influence of the distance employed in the sum of squares. Try to minimize the sum of squares for the different datasets. The choices of intercept and slope that minimize the sum of squared distances for a kind of distance are not the optimal for a different kind of distance.
